# Hackathon-II-The-Evolution-of-Todo

./: .mcp.json  Hackathon II - Todo Spec-Driven Development.pdf:Zone.Identifier  PHASE5_COMPLETION.md  PHASE7_COMPLETION.md  PHASE8_COMPLETION.md  PROJECT_STATUS.md  README.md  pyproject.toml  question.txt  requirements-mcp.txt
.claude/: config.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
history/prompts/001-todo-console-app/: 0001-create-todo-console-app-specification.spec.prompt.md  0002-implementation-plan-architecture.plan.prompt.md  0004-setup-and-foundation-implementation.green.prompt.md  0005-user-story-1-test-first-implementation.red.prompt.md
history/prompts/001-todo-console-app/green/: phase3-add-task-implementation.md  (+5 more)
history/prompts/constitution/: 0001-strengthen-constitution-with-traceability-and-testing-discipline.constitution.prompt.md  001-phase1-todo-constitution.constitution.prompt.md
mcp/: __init__.py  server.py
mcp/server/: stdio.py
phase_1/: .gitignore  ACCEPTANCE_SCENARIOS.md  AGENTS.md  CLAUDE.md  MCP_SERVER.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE6_COMPLETION.md  PROJECT_STATUS.md  mcp_server.py  test_mcp_server.py
phase_1/.specify/templates/: plan-template.md  spec-template.md
phase_1/mcp/: types.py
phase_1/mcp/server/: __init__.py  server_impl.py
phase_1/specs/phase-1/: tasks.md
phase_1/src/: cli.py
phase_1/tests/: __init__.py  test_acceptance.py  test_cli.py  test_cli_phase5.py  test_cli_phase7.py  test_models.py  test_storage.py  test_storage_phase5.py
phase_2/: .env.example  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  JWT_BRIDGE_TEST_GUIDE.md  JWT_VERIFICATION_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_6_IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
phase_2/.specify/memory/: constitution.md
phase_2/backend/: Dockerfile  alembic.ini  init_db.py  pyproject.toml
phase_2/backend/alembic/: __init__.py  env.py
phase_2/backend/alembic/versions/: 001_initial_schema.py  __init__.py
phase_2/backend/src/: __init__.py  config.py  constants.py  errors.py  main.py
phase_2/backend/src/api/: dependencies.py
phase_2/backend/src/api/v1/: __init__.py  auth.py  tasks.py
phase_2/backend/src/db/: engine.py  session.py
phase_2/backend/src/debug/: jwt_debugger.py
phase_2/backend/src/middleware/: jwt_verification.py
phase_2/backend/src/models/: __init__.py  refresh_token.py  task.py  user.py
phase_2/backend/src/schemas/: task.py  user.py
phase_2/backend/src/services/: auth_service.py  task_service.py
phase_2/backend/src/utils/: __init__.py  datetime.py  password.py  uuid.py
phase_2/frontend/: .eslintignore  .eslintrc.json  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
phase_2/frontend/src/: middleware.ts
phase_2/specs/001-sdd-initialization/: README.md  overview.md  plan.md  spec.md  tasks.md
specs/001-todo-console-app/: spec.md  tasks.md
specs/001-todo-console-app/checklists/: requirements.md
specs/phase-1/: plan.md  tasks.md
src/: __init__.py  cli.py  main.py  models.py  storage.py
tests/: test_cli.py  test_cli_phase6.py  test_storage.py  test_storage_phase6.py  test_storage_phase7.py
(+41 files in other folders)
