[project]
name = "todo-console-app"
version = "1.0.0"
description = "A Todo In-Memory Python Console App with CLI interface"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Development Team"}
]

dependencies = [
    "rich>=13.0.0",  # CLI formatting and output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",       # Testing framework
    "pytest-cov>=4.0.0",   # Code coverage measurement
]

[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "acceptance: Acceptance/end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
skip_covered = false
fail_under = 80

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
